<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textView_ip"/>

            <EditText
                android:id="@+id/editText_IP"
                android:layout_width="170dp"
                android:layout_height="50dp"
                android:text="@string/editText_IP_Value"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textView_port"/>

            <EditText
                android:id="@+id/editText_Port"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:text="54321"/>

        </LinearLayout>

        <Button
            android:id="@+id/button_connexion"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/button_connexion"
            android:onClick="onClickButtonConnexion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textView_messageInfo"
                android:layout_marginRight="10dp"/>

            <EditText
                android:id="@+id/editText_messageInfo"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="message"/>

            <Button
                android:id="@+id/button_sendMessageInfo"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:text="@string/button_sendMessage"
                android:onClick="onClickButtonSendMessage"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textView_messageEtat"
                android:layout_marginRight="10dp"/>

            <EditText
                android:id="@+id/editText_etat"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="etat"/>

            <EditText
                android:id="@+id/editText_messageEtat"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="message"/>

            <Button
                android:id="@+id/button_sendMessageEtat"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:text="@string/button_sendMessage"
                android:onClick="onClickButtonSendMessage"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textView_messageControl"
                android:layout_marginRight="10dp"/>

            <EditText
                android:id="@+id/editText_x"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:hint="x"/>

            <EditText
                android:id="@+id/editText_y"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:hint="y"/>

            <EditText
                android:id="@+id/editText_distance"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="distance"/>

            <EditText
                android:id="@+id/editText_messageEtat"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="message"/>

            <Button
                android:id="@+id/button_sendMessageControl"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:text="@string/button_sendMessage"
                android:onClick="onClickButtonSendMessage"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textView_messageVitesse"
                android:layout_marginRight="10dp"/>

            <EditText
                android:id="@+id/editText_vitesse"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="vitesse"/>

            <EditText
                android:id="@+id/editText_messageVitesse"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="message"/>

            <Button
                android:id="@+id/button_sendMessageVitesse"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:text="@string/button_sendMessage"
                android:onClick="onClickButtonSendMessage"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textView_messageChoixPiste"
                android:layout_marginRight="10dp"/>

            <EditText
                android:id="@+id/editText_piste"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:hint="piste"/>

            <EditText
                android:id="@+id/editText_nbRun"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:hint="nb Run"/>

            <EditText
                android:id="@+id/editText_nbFail"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:hint="nb Fail"/>

            <EditText
                android:id="@+id/editText_messagePiste"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="message"/>

            <Button
                android:id="@+id/button_sendMessageChoixPiste"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:text="@string/button_sendMessage"
                android:onClick="onClickButtonSendMessage"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textView_messageRecuperationPiste"
                android:layout_marginRight="10dp"/>

            <EditText
                android:id="@+id/editText_messageRecuperationPistes"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="message"/>

            <Button
                android:id="@+id/button_sendMessageRecuperationPistes"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:text="@string/button_sendMessage"
                android:onClick="onClickButtonSendMessage"/>

        </LinearLayout>

    </LinearLayout>





</android.support.constraint.ConstraintLayout>